--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body onload="showMyFace()">
 <form id="loginForm" onsubmit="return login(this)">
@@ -20,6 +19,6 @@
 </button>
 
 <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
-<script type="text/javascript" src="{% static "js/webrtc.js" %}"></script>
+<script type="text/javascript" src="js/webrtc.js"></script>
 </body>
 </html>
